Bug 1290075 - Always Init() the VoiceEngine when enumerating audio inputs. r=jib, a=gchang

--HG--
extra : source : e1ff3a7826a38ec925771dbb2027ce81ea436fe8